pkg/gox/testdata/errors/missing_ternary_colon.gox
package main

import gf "github.com/graybuton/goframe/pkg/goframe"

func View(show bool) gf.Node {
	return <main>{show ? <p>Yes</p>}</main>
}
